--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
     "python.pythonPath": "C:\\Users\\Vedant Taparia\\anaconda3\\python.exe"
+    "terminal.integrated.fontFamily": "MesloLGM Nerd Font"
 }
